--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="Imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>        
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado"src="Imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quis eveniet fugit, sed, blanditiis minima amet ipsam aliquid atque, deserunt adipisci perspiciatis ducimus. Officia aliquam qui unde nihil magni cum?
             </p>
+            <p><a href="curso-html.html"> o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de Javascript</h2>
+            <img class="lado" src="Imagens/curso-javascript.png" alt="Curso de Javascript">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos explicabo, natus consequuntur labore minima similique unde minus accusamus illo culpa, tempora, repellendus voluptatum dignissimos et ea ipsam sapiente quasi neque.
             </p>
+            <p><a href="curso-js.html"> o curso de Javascript</a></p>
         </article>
     </main>
 </body>
